# parse-magnet

./: Cargo.toml  README.md  test.magnet
examples/: ex1.rs  ex2.rs
src/: lib.rs  magnet.rs
