[package]
name = "parse_torrent"
version = "0.5.2"
description = "Parse Bittorent .torrent files into usable structs"
authors = ["craig OConnor <oconnorct1@gmail.com>"]
repository = "https://github.com/CraigglesO/parse-torrent"
license = "GPL-3.0"

[dependencies]
serde = "1.0.7"
serde_derive = "0.8.22"
serde_urlencoded = "0.5.1"
